--- a/final_project/templates/index.html
+++ b/final_project/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="./static/mywebscript.js"></script>
+<script src="mywebscript.js"></script>
 <div class="card">
     <div class="card-body">
         <div class="mb-3">
@@ -10,8 +10,8 @@
         </div>
 
         <div style="padding: 25px 25px 25px 25px;">
-            <button onclick="english_to_french()" class="btn btn-secondary">Translate to French</button>
-            <button onclick="french_to_english()" class="btn btn-secondary">Translate to English</button>
+            <button onclick="english_to_french()" class="btn btn-secondary" id="en-fr">Translate to French</button>
+            <button onclick="french_to_english()" class="btn btn-secondary" id="fr-en">Translate to English</button>
         </div>
 
         <div id="translated_text" style="padding: 25px 25px 25px 25px;"></div>
